<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<RelativeLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".LoginActivity">-->

<!--    &lt;!&ndash;EditText for getting user email address&ndash;&gt;-->
<!--    &lt;!&ndash;input type is set to email&ndash;&gt;-->
<!--    <EditText-->
<!--        android:id="@+id/username"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:hint="@string/app_name"-->
<!--        android:importantForAutofill="no"-->
<!--        android:inputType="text" />-->

<!--    &lt;!&ndash;EditText for getting user password&ndash;&gt;-->
<!--    &lt;!&ndash;input type is set to password&ndash;&gt;-->
<!--    <EditText-->
<!--        android:id="@+id/password"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/username"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:hint="@string/app_name"-->
<!--        android:importantForAutofill="no"-->
<!--        android:inputType="textPassword" />-->

<!--    &lt;!&ndash;button to continue to login&ndash;&gt;-->
<!--    <Button-->
<!--        android:id="@+id/btnLogin"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/password"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:text="login" />-->

<!--</RelativeLayout>-->


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="273dp"
        android:layout_height="138dp"
        android:layout_marginTop="44dp"
        android:src="@mipmap/ic_gs_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo" />


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="299dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:padding="5sp"
        android:text="Username"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login" />

    <androidx.cardview.widget.CardView
        android:id="@+id/usernameBox"
        android:layout_width="296dp"
        android:layout_height="55dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/cardview_stroke"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername">

        <EditText
            android:id="@+id/username"
            android:layout_width="296dp"
            android:layout_height="55dp"
            android:layout_margin="1dp"
            android:autofillHints=""
            android:background="@android:color/white"
            android:hint="Masukkan username"
            android:minHeight="48dp"
            android:padding="16dp"
            android:inputType="textEmailAddress" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="299dp"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"
        android:padding="5sp"
        android:text="@string/password"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameBox" />

    <androidx.cardview.widget.CardView
        android:id="@+id/passwordBox"
        android:layout_width="296dp"
        android:layout_height="55dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/cardview_stroke"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextView">

        <EditText
            android:id="@+id/password"
            android:layout_width="296dp"
            android:layout_height="55dp"
            android:layout_margin="1dp"
            android:autofillHints=""
            android:background="@android:color/white"
            android:hint="@string/masukkan_password"
            android:minHeight="48dp"
            android:padding="16dp"
            android:inputType="textPassword" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:text="@string/login"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordBox"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_punya_akun"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/daftar_sekarang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar_sekarang"
            android:textColor="@color/teal_700" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>